// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#AccountCreate render 1`] = `
<React.Fragment>
  <ModalHeader>
    <Illustration
      name="EnjoyApp"
      size="small"
    />
    <Heading
      element="h2"
    >
      <Translate
        html={false}
        t="account.create_account"
        transform={[Function]}
        values={Object {}}
      />
    </Heading>
    <Translate
      html={false}
      t="account.create_account_description"
      transform={[Function]}
      values={Object {}}
    />
  </ModalHeader>
  <ModalSection
    dataTest="AccountCreate"
  >
    <form
      onSubmit={[Function]}
    >
      <Stack
        spacing="comfy"
      >
        <ForwardRef
          dataTest="Email"
          label="account.email"
          onChange={[Function]}
          placeholder="account.email_placeholder"
          type="email"
          value=""
        />
        <ForwardRef
          dataTest="Password"
          label="account.password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <ForwardRef
          dataTest="PasswordConfirm"
          label="account.password_confirmaiton"
          onChange={[Function]}
          type="password"
          value=""
        />
        <Button
          submit={true}
        >
          <Translate
            html={false}
            t="account.create"
            transform={[Function]}
            values={Object {}}
          />
        </Button>
        <Text
          html={true}
          size="small"
          t="account.terms_and_privacy_policy"
        />
      </Stack>
    </form>
  </ModalSection>
</React.Fragment>
`;

exports[`#AccountCreate validation errors 1`] = `
<React.Fragment>
  <ModalHeader>
    <Illustration
      name="EnjoyApp"
      size="small"
    />
    <Heading
      element="h2"
    >
      <Translate
        html={false}
        t="account.create_account"
        transform={[Function]}
        values={Object {}}
      />
    </Heading>
    <Translate
      html={false}
      t="account.create_account_description"
      transform={[Function]}
      values={Object {}}
    />
  </ModalHeader>
  <ModalSection
    dataTest="AccountCreate"
  >
    <form
      onSubmit={[Function]}
    >
      <Stack
        spacing="comfy"
      >
        <ForwardRef
          dataTest="Email"
          error="Wrong format of e-mail"
          label="account.email"
          onChange={[Function]}
          placeholder="account.email_placeholder"
          type="email"
          value=""
        />
        <ForwardRef
          dataTest="Password"
          error="Password should be more complex"
          label="account.password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <ForwardRef
          dataTest="PasswordConfirm"
          error="Passwords do not match"
          label="account.password_confirmaiton"
          onChange={[Function]}
          type="password"
          value=""
        />
        <Button
          submit={true}
        >
          <Translate
            html={false}
            t="account.create"
            transform={[Function]}
            values={Object {}}
          />
        </Button>
        <Text
          html={true}
          size="small"
          t="account.terms_and_privacy_policy"
        />
      </Stack>
    </form>
  </ModalSection>
</React.Fragment>
`;
